@@ -1,0 +1,8 @@
+{
+  "data": {
+    "result": 697.70,
+    "realLostYield": 697.70,
+    "comment": "",
+    "totalCompensation": 51.42
+  }
+}
